fix white margin on mobile

--- a/index.scss
+++ b/index.scss
@@ -1,6 +1,9 @@
+html,
 body,
 figure {
   margin: 0;
+  padding: 0;
+  overflow-x: hidden;
 }
 
 nav,
@@ -130,7 +133,6 @@ nav {
       width: 95px;
       font-size: 12.75px;
       letter-spacing: 0.4px;
-      line-height: 30px;
     }
   }
 
